# pyleftpad

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
docs/: Makefile  conf.py  index.rst  leftpad.rst  make.bat
docs/leftpad/: cli.rst  func.rst
hooks/: pre-commit
leftpad/: __init__.py  cli.py  func.py
tests/: cli_test.py  func_test.py
