[bdist_wheel]
universal = 1

[metadata]
name = pyleftpad
version = attr: leftpad.__version__
description = Python leftpad
long_description = file: README.md
long_description_content_type = text/markdown
keywords = leftpad, pyleftpad
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Utilities
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers

[options]
packages = find:

[options.extras_require]
tests =
    flake8
    flake8-import-order >= 0.18, < 0.19
    flake8-import-order-spoqa >= 1.4.1, < 1.5
    pytest >= 3.7.1
    pytest-flake8 >= 1.0.2, < 1.1
    tox >= 3.2.1
docs =
    Sphinx >= 1.7.6
